# fuel-upgrade

./: .gitreview  MAINTAINERS  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upgrade.sh
fuel_upgrade/: checker_manager.py  cli.py  config.py  upgrade.py  utils.py  version_file.py
fuel_upgrade/clients/: supervisor_client.py
fuel_upgrade/engines/: backup.py  docker_engine.py
fuel_upgrade/pre_upgrade_hooks/: from_7_0_to_8_0_disable_api.py  manager.py
fuel_upgrade/tests/: test_backup_manager.py  test_docker_upgrader.py  test_pre_upgrade_hooks.py  test_supervisor_client.py  test_utils.py
specs/: fuel-upgrade.spec
