[metadata]
name = fuel_upgrade
description = Upgrade system for Fuel Admin node
long_description = Upgrade system for Fuel Admin node
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: Fuel
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7
    Topic :: System :: Software Distribution

[files]
packages = fuel_upgrade

[entry_points]
console_scripts =
    fuel-upgrade = fuel_upgrade.cli:main
